--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@mui/x-data-grid": "^6.18.4",
+    "@nem035/gpt-3-encoder": "^1.1.7",
     "@projectstorm/react-diagrams": "^7.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/themes": "^2.0.2",
+    "aiconfig": "^1.0.7",
     "beautiful-react-diagrams": "^0.5.1",
     "next": "14.0.4",
     "react": "^18",
